dwiic(4): Don't try to attach children if dwiic_attach failed.

PR kern/57063